--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <!-- Add your site or application content here -->
         <!-- Main header for the site - where the logo goes -->
         <header class="main_header">
+            <!-- The best practice is to only have one H1, I would use two span tags to get the ids associate with the individual words-->
           <h1 id="bare">Bare</h1> <h1 id="medium">Medium</h1>
         </header>
 
@@ -33,11 +34,11 @@
         <h2>Portfolio Coming Soon</h2>
         
         <div class="introduction">
-          <p>Fancy meeting you here.  While I have your attention, let me tell you a little about myself. My name is Brent Robertson and I'm an aspiring Graphic Designer and Web Developer/Designer.  Honestly I just want to create...and create well.  I've always had a passion for motivating others to pursue their dreams.  This means that I want to help bring your ideas to life.  That's why I've decided to do some freelancing under the name <span id="baremedium">BareMedium</span>.  If you need a logo or killer website designed, feel free to send me an <a class="contact" href="mailto:brent.robertson3@gmail.com" target="_blank">email</a> at Brent.robertson3@gmail.com.  You can also check out my <a class="contact" href="http://www.tumblr.com/blog/baregeek" target="_blank">blog</a> on Tumblr to see what new things I'm up to.  I'm also on <a class="social_media" href="https://www.facebook.com/brent.robertson.56" target="blank">Facebook</a> and <a class="social_media" href="https://twitter.com/TechMeOut21" target="_blank">Twitter</a> if you're into that sort of thing. <br><span id="thanks"> Thanks for stopping by!</span></p>
+          <p>Fancy meeting you here.  While I have your attention, let me tell you a little about myself. My name is Brent Robertson and I'm an aspiring Graphic Designer and Web Developer/Designer.  Honestly I just want to create...and create well.  I've always had a passion for motivating others to pursue their dreams.  This means that I want to help bring your ideas to life.  That's why I've decided to do some freelancing under the name <span id="baremedium">BareMedium</span>.  If you need a logo or killer website designed, feel free to send me an <a class="contact" href="mailto:brent.robertson3@gmail.com" target="_blank">email</a> at Brent.robertson3@gmail.com.  You can also check out my <a class="contact" href="http://www.tumblr.com/blog/baregeek" target="_blank">blog</a> on Tumblr to see what new things I'm up to.  I'm also on <a class="social_media" href="https://www.facebook.com/brent.robertson.56" target="_blank">Facebook</a> and <a class="social_media" href="https://twitter.com/TechMeOut21" target="_blank">Twitter</a> if you're into that sort of thing. <br><span id="thanks"> Thanks for stopping by!</span></p>
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
+        <script src="js/vendor/jquery-1.11.3.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
@@ -50,16 +51,5 @@
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script> -->
-        <script>
-          $("#main_pic").hover(
-            function() {
-              $(this).attr("src", "img/waving.jpg");
-            }, function() {
-              $(this).attr("src", "img/main_pic.jpg");
-              $(this).attr("height", "200px");
-              $(this).attr("width", "200px");
-            }
-          );
-        </script>
     </body>
 </html>
