Changes to header and some responsive sizing
The navigation menu now alternates between red and blue for the active selection. The font and sizes of the images also change according to the size of the viewport.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
                 <span class="strike_through">
                     <span class="strike_through_text">About</span>
                 </span> Me
-                
             </h2>
             <div class="main_image_container">
                 <div class="main_image_div">
@@ -89,23 +88,23 @@
         </div>
 
         <div class="container-fluid skills_container" id="skills">
-            <!-- 1. Going to use bootstrap grid to divide then center each circle 
-                 2. -->
             <h2>Skills</h2>
-            <div class="row inner_skills_container col-xs-12 col-md-offset-2 col-md-8">
-                <div class="skill_shell">
-                    <div class="skill">
-                      <span class="skill_banner">HTML5</span>
+            <div class="row inner_skills_container">
+                <div class="col-xs-12 col-md-8 col-md-offset-2">
+                    <div class="skill_shell">
+                        <div class="skill">
+                          <span class="skill_banner">HTML5</span>
+                        </div>
                     </div>
-                </div>
-                <div class="skill_shell">
-                    <div class="skill">
-                      <span class="skill_banner">CSS3</span>
+                    <div class="skill_shell">
+                        <div class="skill">
+                          <span class="skill_banner">CSS3</span>
+                        </div>
                     </div>
-                </div>
-                <div class="skill_shell">
-                    <div class="skill">
-                      <span class="skill_banner">JavaScript</span>
+                    <div class="skill_shell">
+                        <div class="skill">
+                          <span class="skill_banner">JavaScript</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -113,14 +112,29 @@
 
         <div class="container-fluid portfolio_container" id="portfolio">
             <h2>Portfolio</h2>
-            <div class="portfolio_images">
-                <img class="thumbnails rethree" src="img/ReThree_screen.png" alt="ReThree">
-                <img class="thumbnails rethree" src="img/ReThree_screen.png" alt="ReThree">
-                <img class="thumbnails rethree" src="img/ReThree_screen.png" alt="ReThree">
-                <img class="thumbnails rethree" src="img/ReThree_screen.png" alt="ReThree">
-                <img class="thumbnails rethree" src="img/ReThree_screen.png" alt="ReThree">
-                <img class="thumbnails rethree" src="img/ReThree_screen.png" alt="ReThree">
-                <img class="thumbnails rethree" src="img/ReThree_screen.png" alt="ReThree">
+            <div class="portfolio_thumbnails_container">
+                <!-- TODO: add the read more description after each thumbnail -->
+                <div class="project_container">
+                    <img class="thumbnail rethree" src="img/ReThree_screen.png" alt="ReThree">
+                </div>
+                <div class="project_container">
+                    <img class="thumbnail rethree" src="img/ReThree_screen.png" alt="ReThree">
+                </div>
+                <div class="project_container">
+                    <img class="thumbnail rethree" src="img/ReThree_screen.png" alt="ReThree">
+                </div>
+                <div class="project_container">
+                    <img class="thumbnail rethree" src="img/ReThree_screen.png" alt="ReThree">
+                </div>
+                <div class="project_container">
+                    <img class="thumbnail rethree" src="img/ReThree_screen.png" alt="ReThree">
+                </div>
+                <div class="project_container">
+                    <img class="thumbnail rethree" src="img/ReThree_screen.png" alt="ReThree">
+                </div>
+                <div class="project_container">
+                    <img class="thumbnail rethree" src="img/ReThree_screen.png" alt="ReThree">
+                </div>
             </div>
         </div>
 
