Added some of the brief descriptions for each project.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class="thumbnail"></div>
                     </div>
                     <h3>ReThree</h3>
-                    <p>Here's some text for you to read. Here's some text for you to read.Here's some text for you to read.Here's some text for you to read.Here's some text for you to read.Here's some text for you to read.Here's some text for you to read.</p>
+                    <p class="brief_description">ReThree is an online lesson tool, used to educate users on the three R’s: Reducing, Reusing, and Recycling.  This was the final project for my Front End Web Development course at <a href="https://generalassemb.ly/education/front-end-web-development" target="_blank">General Assembly</a>.</p>
                     <!-- TODO change the color of this on hover. -->
                     <p id="read_more rethree_modal" data-toggle="modal" data-target="#rethree_modal"><a>Read More</a></p>
 
@@ -146,7 +146,7 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Modal Header</h4>
+                                    <h4 class="modal-title">ReThree</h4>
                                 </div>
                                 <div class="modal-body">
                                     <p>Some text in the modal.</p>
@@ -164,8 +164,8 @@
                     <div class="thumbnail_container baremedium_image">
                         <div class="thumbnail"></div>
                     </div>
-                    <h3>ReThree</h3>
-                    <p>Here's some text for you to read. Here's some text for you to read.Here's some text for you to read.Here's some text for you to read.Here's some text for you to read.Here's some text for you to read.Here's some text for you to read.</p>
+                    <h3>BareMedium</h3>
+                    <p class="brief_description">Well this should look familiar.  This is my portfolio project where I display some of my work, as well as tell you a little about myself.  I also freelance, so if you like what you see then <a>contact me</a> below.</p>
                     <p id="read_more"><a>Read More</a></p>
                 </div>
                 <!-- This is the container for the Upcoming Chewzer Project. -->
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                     <h3>Chewzer</h3>
-                    <p>Here's some text for you to read. Here's some text for you to read.Here's some text for you to read.Here's some text for you to read.Here's some text for you to read.Here's some text for you to read.Here's some text for you to read.</p>
+                    <p class="brief_description">Chewzer is a collaborative project that I'm working on with the talented Lindsay Boylan.  This project suggestly weekly meals based on your dietary restrictions and nutritional targets.</p>
                     <p id="read_more"><a>Read More</a></p>
                 </div>
             </div>
