--- a/index.html
+++ b/index.html
@@ -173,6 +173,11 @@
                 <!-- This is the container for the BareMedium Project. -->
                 <div class="project_container">
                     <div class="thumbnail_container baremedium_image">
+                        <div class="project_skill hidden">CSS3</div>
+                        <div class="project_skill hidden">HTML5</div>
+                        <div class="project_skill hidden">JavaScript</div>
+                        <div class="project_skill hidden">Flexbox</div>
+                        <div class="project_skill hidden">Bootstrap</div>
                         <div class="thumbnail"></div>
                     </div>
                     <div>
@@ -251,14 +256,17 @@
                         <a href="https://www.facebook.com/brent.robertson.56" target="_blank">
                             <li><i class="fa fa-fw fa-facebook fa-2x"></i></li>
                         </a>
-                        <a href="https://www.linkedin.com/in/brentrobertson3">
+                        <a href="https://www.linkedin.com/in/brentrobertson3" target="_blank">
                             <li><i class="fa fa-fw fa-linkedin fa-2x"></i></li>
                         </a>
-                        <a href="https://twitter.com/TechMeOut21">
+                        <a href="https://twitter.com/TechMeOut21" target="_blank">
                             <li><i class="fa fa-fw fa-twitter fa-2x"></i></li>
                         </a>
-                        <a href="http://www.tumblr.com/blog/baregeek">
+                        <a href="http://www.tumblr.com/blog/baregeek" target="_blank">
                             <li><i class="fa fa-fw fa-tumblr fa-2x"></i></li>
+                        </a>
+                        <a href="https://github.com/brobertson3" target="_blank">
+                            <li><i class="fa fa-fw fa-github fa-2x"></i></li>
                         </a>
                     </ul>
                 </div>
