--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
                 </div>
                 <div class="real_me hidden">
                     <p>HAHA Get It?<p>
-                    <p>Blurred...Bare...yeah<p>
+                    <p>Blurred...<p>
+                    <p>Bare...</p>
+                    <p>Yeah...</p>
                 </div>
             </div>
             <p class="intro">Hmmm…where to start? I’m a 27 year old dreamer and have lived in Baltimore, Maryland practically my whole life.  I’ve always had ambitions to create, probably because I have two insanely talented, creative, and artistic parents.  That passion led me to Front End Web Development, since it bridges the gap between my creative and technical skills.  What technical skills you ask…Oh…I forgot to mention that I’ve been a full-time Software Engineer for the past four years.</p>
