--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="fa/font-awesome.min.css">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/responsive.css">
-        <link href='https://fonts.googleapis.com/css?family=Permanent+Marker|Life+Savers|Finger+Paint|Glegoo|Roboto:300' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Permanent+Marker|Life+Savers:400,700|Finger+Paint|Glegoo|Roboto:300' rel='stylesheet' type='text/css'>
 
         <!-- Script links -->
         <script src='http://code.jquery.com/jquery-latest.min.js'></script>
