--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <div class="row">
                 <!-- Small screen I want each to take up entire width.
                 Medium and up it can go side by side. -->
-                <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 contact_form">
+                <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 contact_form">
                     <form>
                         <div class="form-group">
                             <label for="inputName">Name:</label>
