--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                             <span class="icon-bar"></span>
                         </button>
                         <!-- This will become an image once the logo is completed -->
-                        <a class="navbar-brand" href="#">BareMedium</a>
+                        <a class="navbar-left" href="#"><img src="img/BareMediumLogoWeb.svg" class="logo" height="30" width="30"></a>
+                        <a class="navbar-brand" href="#">Bare Medium</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
