--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="fa/font-awesome.min.css">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/responsive.css">
-        <link href='https://fonts.googleapis.com/css?family=Permanent+Marker|Life+Savers:400,700|Finger+Paint|Glegoo|Roboto:300' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Permanent+Marker|Life+Savers:400,700|PT+Serif:400' rel='stylesheet' type='text/css'>
 
         <!-- Script links -->
         <script src='http://code.jquery.com/jquery-latest.min.js'></script>
@@ -88,15 +88,15 @@
                     <p>Yeah...</p>
                 </div>
             </div>
-            <p class="intro">Hmmm…where to start? I’m a 27 year old dreamer and have lived in Baltimore, Maryland practically my whole life.  I’ve always had ambitions to create, probably because I have two insanely talented, creative, and artistic parents.  That passion led me to Front End Web Development, since it bridges the gap between my creative and technical skills.  What technical skills you ask…Oh…I forgot to mention that I’ve been a full-time Software Engineer for the past four years.</p>
-            <p class="intro">I recently completed the Front End Web Development course at General Assembly in May 2016.  That was my springboard into this field and now I intend to use those skills to freelance.  My skills are constantly growing so you’re in good hands. My work, though not abundant at this point, speaks for itself, which creeped me out at first, but now I like what it has to say and I’m sure you will too. -psst- I made this site as well.</p>
+            <p class="intro">Hmmm…where to start? I’m a 28 year old dreamer and have lived in Baltimore, Maryland practically my whole life.  I’ve always had ambitions to create, probably because I have two insanely talented, creative, and artistic parents.  That passion led me to Front End Web Development, since it bridges the gap between my creative and technical skills.  What technical skills you ask…Oh…I forgot to mention that I’ve been a full-time Software Engineer for the past four years.</p>
+            <p class="intro">I completed the Front End Web Development course at General Assembly in May 2016.  That was my springboard into this field and now I intend to use those skills to freelance.  My skills are constantly growing so you’re in good hands. My work, though not abundant at this point, speaks for itself, which creeped me out at first, but now I like what it has to say and I’m sure you will too. -psst- I made this site as well.</p>
             <p>When I’m not coding I thoroughly enjoy:</p>
             <ol class="hobbies_list">
                 <li>watching anime (Luffy is my spirit animal)</li>
-                <li>playing video games (still Xbox 360)</li>
+                <li>playing video games (PS4 now)</li>
                 <li>any kind of brainteaser (2 + 2 = Golf)</li>
                 <li>drawing (I’m starting to do comics)</li>
-                <li>lists comprised of five facts (get to know me more by contacting me.)</li>
+                <li>lists comprised of five facts</li>
             </ol>
         </div>
 
