Features for OnScroll
When scrolling to the Skills section, Javascript was added to fade in the different skill elements.  Also, when scrolling to each section the active section is highlighted in the navbar.

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse my_nav" id="nav_main">
                         <ul class="nav navbar-nav navbar-right">
-                            <li class="active"><a href="#home">Home <span class="sr-only">(current)</span></a></li>
-                            <li><a href="#about_me">About</a></li>
-                            <li><a href="http://www.tumblr.com/blog/baregeek" target="_blank">Blog</a></li>
-                            <li><a href="#skills">Skills</a></li>
-                            <li><a href="#portfolio">Portfolio</a></li>
-                            <li><a href="#contact_me">Contact</a></li>
+                            <li class="active" id="nav_home"><a href="#home">Home <span class="sr-only">(current)</span></a></li>
+                            <li id="nav_about"><a href="#about_me">About</a></li>
+                            <li id="nav_blog"><a href="http://www.tumblr.com/blog/baregeek" target="_blank">Blog</a></li>
+                            <li id="nav_skills"><a href="#skills">Skills</a></li>
+                            <li id="nav_portfolio"><a href="#portfolio">Portfolio</a></li>
+                            <li id="nav_contact"><a href="#contact_me">Contact</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </div><!-- /.container-fluid -->
@@ -119,6 +119,21 @@
                           <span class="skill_banner">JavaScript</span>
                         </div>
                     </div>
+                    <div class="skill_shell">
+                        <div class="skill">
+                          <span class="skill_banner">Bootstrap</span>
+                        </div>
+                    </div>
+                    <div class="skill_shell">
+                        <div class="skill">
+                          <span class="skill_banner">FlexBox</span>
+                        </div>
+                    </div>
+                    <div class="skill_shell">
+                        <div class="skill">
+                          <span class="skill_banner">WordPress</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -144,7 +159,7 @@
                         <i class="fa fa-angle-double-left custom fa-2x hidden"></i>
                     </div>
 
-                    <p class="brief_description">ReThree is an online lesson tool, used to educate users on the three R’s: Reducing, Reusing, and Recycling.  This was the final project for my Front End Web Development course at <a href="https://generalassemb.ly/education/front-end-web-development" target="_blank">General Assembly</a>.</p>
+                    <p class="brief_description">ReThree is an online tool, used to educate users on the three R’s: Reducing, Reusing, and Recycling.  This was the final project for my Front End Web Development course at <a href="https://generalassemb.ly/education/front-end-web-development" target="_blank">General Assembly</a>.</p>
                     <!-- TODO change the color of this on hover. -->
                     <p id="read_more rethree_modal" data-toggle="modal" data-target="#rethree_modal"><a>Read More</a></p>
 
